# audiobook_dev

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  ALPINE_MIGRATION_SUMMARY.md  CONCURRENCY_ANALYSIS.md  FIXES_SUMMARY.md  Makefile  PLAYWRIGHT_ASYNC_FIX_SUMMARY.md  README.md  SYSTEM_COMPLETION_SUMMARY.md  backend_security_check.py  coverage.xml  enhanced_security_audit_20250616_182414.json  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  test_comprehensive_metadata.py  test_ip_extraction.py  test_metadata_fields.py  test_notification_metadata.py  test_security_demo.py  test_system_validation.py  test_webhook_post.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  lint.yml  pre-commit-autoupdate.yml
audiobook_dev.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: config.yaml.example  mam_config.json.example
docs/: CONCURRENCY_ANALYSIS.md  DOCUMENTATION_CLEANUP_SUMMARY.md  LOGGING_STANDARDIZATION.md  MAM_API_MIGRATION.md  PR1_REVIEW_FIXES.md  README.md  SYSTEM_COMPLETION_SUMMARY.md  TEMPLATE_ASSETS.md
docs/api/: config-reference.md  rest-api.md
docs/archive/: ALPINE_MIGRATION_SUMMARY.md  BACKEND_SECURITY_AUDIT_JUNE_2025.md  CONFIGURATION_STRUCTURE.md  CSS_JS_REFACTOR.md  CYBERPUNK_THEME_COMPLETION.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENDPOINT_PROTECTION.md  INTERACTIVE_FIXES.md  IP_EXTRACTION_FIX.md  LOGGING_IMPROVEMENTS.md  METADATA_TESTING_COMPLETE.md  METADATA_WORKFLOW_TEST_RESULTS.md  PRODUCTION_SECURITY_GUIDE.md  RATE_LIMITING_IMPLEMENTATION.md  SECURITY_AUDIT_JUNE_2025.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_SUMMARY.md  WEBHOOK_SECURITY.md
docs/development/: LOGGING_IMPROVEMENTS.md  METADATA_FIELDS_FIX_SUMMARY.md  PLAYWRIGHT_ASYNC_FIX_SUMMARY.md  SECURITY.md  architecture.md  contributing.md  testing.md
docs/security/: DOCUMENTATION_UPDATE_SUMMARY.md  ENDPOINT_PROTECTION.md  IP_EXTRACTION_FIX.md  PRODUCTION_SECURITY_GUIDE.md  REVERSE_PROXY_SECURITY.md  SECURITY_AUDIT_JUNE_2025.md  SECURITY_IMPLEMENTATION_SUMMARY.md
docs/user-guide/: configuration.md  getting-started.md  notifications.md  troubleshooting.md  web-interface.md
src/: audible_client.py  audible_scraper.py  audnex_metadata.py  config.py  db.py  html.py  http_client.py  logging_setup.py  main.py  mam_login_only.py  mam_scraper.py  metadata.py  metadata_coordinator.py  qbittorrent.py  request_id_middleware.py  security.py  store.py  template_helpers.py  token_gen.py  utils.py  webui.py
src/archive/: mam_scraper.py.old
src/audiobook_dev.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mam_api/: __init__.py  adapter.py  client.py  models.py
src/notify/: discord.py  gotify.py  ntfy.py  pushover.py
static/css/: alpine-enhancements.css  base.css  components.css  fonts.css  style.css
static/css/pages/: approval.css  error.css  home.css  home_backup.css  rejection.css  success.css  token_expired.css
static/images/: .gitkeep
static/js/: alpine-approval.js  alpine-components.js  alpine-home.js  alpine-pages.js  app.js  base.js  components.js  init-alpine.js
static/js/pages/: approval.js  error.js  home.js  rejection.js  success.js  token_expired.js
templates/: 401_page.html  approval.html  base.html  css_test.html  failure.html  index.html  rejection.html  security_headers.html  success.html  token_expired.html
tests/: conftest.py  test_audible_client.py  test_audible_scraper.py  test_audnex_direct.py  test_audnex_metadata.py  test_config.py  test_database_integration.py  test_end_to_end.py  test_error_recovery.py  test_http_client.py  test_integration.py  test_main_integration.py  test_mam_api.py  test_mam_integration.py  test_mam_integration_template.py  test_mam_login.py  test_metadata_coordinator.py  test_metadata_extended.py  test_metadata_workflow.py  test_notify_formatting.py  test_performance.py  test_qbittorrent.py  test_qbittorrent_coverage.py  test_security.py  test_token_gen.py  test_utils_extra.py  test_utils_metadata.py  test_webui.py  test_webui_extended.py
